# asusctl

./: CMakeLists.txt  README.md  main.c
src/: cpuctl.h  cpumode.c  fanctl.h  fanmode.c  main.c  mode.h  notify.h
